<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.0</version>
        <relativePath/>
    </parent>

    <groupId>com.github.mengweijin</groupId>
    <artifactId>vitality-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>  
    <name>vitality-parent</name>
    <description>vitality-parent</description>
    <url>https://gitee.com/mengweijin/vitality</url>

    <modules>
        <module>vitality-admin</module>
        <module>vitality-framework</module>
        <module>vitality-layui</module>
        <module>vitality-generator</module>
    </modules>

    <properties>
        <revision>1.3.0-SNAPSHOT</revision>
        <!--    <gpg.skip>true</gpg.skip>-->
        <!--    <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>-->
        <skipTests>true</skipTests>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <hutool.version>6.0.0.M3</hutool.version>
        <oshi.version>6.4.3</oshi.version>
        <zxing.version>3.5.1</zxing.version>
        <minio.version>8.5.3</minio.version>
        <ip2region.version>2.7.0</ip2region.version>
        <jsoup.version>1.16.1</jsoup.version>
        <mybatis-plus.version>4.0.8</mybatis-plus.version>
        <p6spy-spring-boot-starter.version>1.9.0</p6spy-spring-boot-starter.version>
        <flyway-extend.version>1.0.1</flyway-extend.version>
        <easyexcel.version>3.3.1</easyexcel.version>
        <knife4j.version>4.1.0</knife4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
        <!--<dependency>-->
        <!--    <groupId>org.springframework.boot</groupId>-->
        <!--    <artifactId>spring-boot-dependencies</artifactId>-->
        <!--    <version>${spring.boot.version}</version>-->
        <!--    <type>pom</type>-->
        <!--    <scope>import</scope>-->
        <!--</dependency>-->
            <dependency>
                <groupId>com.github.mengweijin</groupId>
                <artifactId>vitality-framework</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.github.mengweijin</groupId>
                <artifactId>vitality-layui</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.github.mengweijin</groupId>
                <artifactId>vitality-generator</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.fhs-opensource</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.gavlyukovskiy</groupId>
                <artifactId>p6spy-spring-boot-starter</artifactId>
                <version>${p6spy-spring-boot-starter.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.mengweijin</groupId>
                <artifactId>flyway-extend</artifactId>
                <version>${flyway-extend.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dromara.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.oshi</groupId>
                <artifactId>oshi-core</artifactId>
                <version>${oshi.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.zxing</groupId>
                <artifactId>core</artifactId>
                <version>${zxing.version}</version>
            </dependency>
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lionsoul</groupId>
                <artifactId>ip2region</artifactId>
                <version>${ip2region.version}</version>
            </dependency>
            <!-- JSOUP HTML解析器 -->
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>${jsoup.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 开源许可证 -->
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <!-- 开发者信息 -->
    <developers>
        <developer>
            <name>Meng Wei Jin</name>
            <email>mengweijin.work@foxmail.com</email>
        </developer>
    </developers>
    <!--开源地址-->
    <scm>
        <url>https://gitee.com/mengweijin/vitality</url>
    </scm>
    <!--  Issue地址  -->
    <issueManagement>
        <system>Gitee Issue</system>
        <url>https://gitee.com/mengweijin/vitality/issues</url>
    </issueManagement>

    <build>
        <plugins>
            <!-- Source -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <doclint>none</doclint>
                    <charset>UTF-8</charset>
                    <docencoding>UTF-8</docencoding>
<!--                    <additionalOptions>-->
<!--                        &lt;!&ndash;由于JDK8的java doc生成机制比之前的要严谨许多,导致项目用maven打包的时候出错 解决办法: 添加-Xdoclint:none配置&ndash;&gt;-->
<!--                        <additionalOption>-Xdoclint:none</additionalOption>-->
<!--                    </additionalOptions>-->
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- GPG -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.8</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>oss</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!--  提交到资料库的地址  -->
    <distributionManagement>
        <snapshotRepository>
            <id>oss</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>oss</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

</project>
